--- a/doc/dissertation/resources/bibliography.bib
+++ b/doc/dissertation/resources/bibliography.bib
@@ -800,7 +800,8 @@ url="http://dx.doi.org/10.1007/978-3-540-25935-0_4"
 @article{kulkarnitranspiler,
   title={Transpiler and it’s Advantages},
   author={Kulkarni, Rohit and Chavan, Aditi and Hardikar, Abhinav},
-  publisher={Citeseer}
+  publisher={Citeseer},
+  year = {2015},
 }
 
 @article{a2001atmol,
