--- a/doc/dissertation/resources/conclusion.tex
+++ b/doc/dissertation/resources/conclusion.tex
@@ -1,7 +1,7 @@
 \chapter{Conclusion} % (fold)
 \label{cha:conclusion}
 As a project, \gls{absol} has been a great success.
-Despite the numerous failures of the project, the end result is a novel contribution to the state of the art in language verification. 
+Despite several failures of the project, the end result is a novel contribution to the state of the art in language verification. 
 Despite the flaws in both the metalanguage and metacompiler, the achievements of this project cannot be ignored. 
 The main successes of this project are twofold:
 \begin{itemize}
