--- a/doc/dissertation/resources/evaluation.tex
+++ b/doc/dissertation/resources/evaluation.tex
@@ -242,7 +242,8 @@ Doing this would have likely improved the software architecture, algorithmic des
 Applying such a process would likely have led to the environment being removed entirely as a feature until it could have been better developed, and given the list of issues with illustrated in \nameref{ssub:the_design_of_the_environment} above, this would not have been entirely negative. \\
 
 Similarly, \autoref{sub:examining_the_testing_approach_in_hindsight} identifies some major problems with the lack of a rigorous (and automated) testing approach.
-The regressions in the parser and verification engine, in particular, that were not caught until much later on cost the project some not-insignificant time to fix.
+The regressions in the parser and verification engine, in particular, were not caught until much later on.
+This cost the project some not-insignificant time to fix. 
 Employing a more rigorous testing procedure, much like a more rigorous design process, would most likely have identified these regressions immediately, or even prevented them from happening in the first place.\\
 
 The initial intent behind the lack of formal processes was to allow a flexible and unrestricted approach to the design and development of \gls{absol}.
