--- a/doc/dissertation/ABSOL_Ara_Adkins.tex
+++ b/doc/dissertation/ABSOL_Ara_Adkins.tex
@@ -81,6 +81,7 @@
 % Some algorithm shorthand
 \newcommand{\Map}[2]{\textbf{map} #1 #2}
 \newcommand{\Reduce}[3]{\textbf{reduce} #1 #2 #3}
+\algnewcommand{\LineComment}[1]{\State \(\triangleright\) #1}
 
 \makeatletter
 \newenvironment{breakablealgorithm}
